--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "fs": "0.0.1-security",
     "jsdom": "^9.8.3",
     "lodash": "^4.16.4",
+    "markdown": "^0.5.0",
+    "markdown-js": "0.0.3",
     "mongodb": "^2.2.11",
     "mysql": "^2.11.1",
     "node-rest-client": "^2.0.1",
